<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_wave_view"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_btn"
        android:text="@string/wave"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn_base_bezier2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/shape_btn"
        android:text="@string/bezier2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_wave_view"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"
         />

    <Button
        android:id="@+id/btn_base_bezier3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_btn"
        android:text="@string/bezier3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_base_bezier2"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_point_beat"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_btn"
        android:text="@string/point_beat"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_base_bezier3"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>